# emsh

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: cmake-multi-platform.yml
include/: emsh.h
include/console/: console.h  input.h  prompt.h  termios_raw_mode.h
include/emsh/: emsh.h
include/emsh/console/: character_sequence.h  console.h  escape_sequences.h  input.h  termios_raw_mode.h  termios_wrappers.h
src/console/: character_sequence.cpp  console.cpp  escape_sequences.cpp  input.cpp  prompt.cpp  termios_raw_mode.cpp  termios_wrappers.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
unit_tests/: CMakeLists.txt
unit_tests/console/: character_sequence_test.cpp  input_test.cpp  prompt_test.cpp  termios_wrappers_test.cpp
